mudança do index

--- a/cadastro.html
+++ b/cadastro.html
@@ -41,7 +41,7 @@
         <div id="mensagem"></div>
 
         <p class="signup-link">
-            Já tem uma conta? <a href="login.html">Faça Login</a>
+            Já tem uma conta? <a href="index.html">Faça Login</a>
         </p>
     </div>
 
